apps/registry/service.yaml
# INTERNAL Service - accessible via ingress
apiVersion: v1
kind: Service
metadata:
  name: registry
  namespace: registry
  labels:
    app: registry
    dns.service-controller.io/enabled: "true"
    dns.service-controller.io/hostname: "registry.buildin.group"
    exposure.service-controller.io/type: "internal"
spec:
  type: ClusterIP
  selector:
    app: registry
  ports:
    - name: http
      port: 80
      targetPort: 5000
      protocol: TCP
